--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div id="app"></div>
         <script>
             window.$docsify = {
-                name: "Lima MVC Docs",
+                name: "Lima Docs",
                 repo: "",
                 loadSidebar: true,
             };
