Getting Started Page
- Created getting started page
- Configured nav to show subheadings

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 name: "Lima Docs",
                 repo: "",
                 loadSidebar: true,
+                subMaxLevel: 4,
                 plugins: [
                     function (hook, vm) {
                         hook.doneEach(function () {
